# KRSON-JS

./: .gitignore  .npmignore  LICENSE  README.md  SPEC.md  browser.js  fuzz.js  index.js  package-lock.json  package.json  test-gzip.js  test.js  test1.js  test2.js  testhigh.js  vitest.config.js
.github/workflows/: ci.yml  fuzz-nightly.yml
krson-js-sdk/: .gitignore  Cargo.toml  index.d.ts  package.json  wrapper.js
src/: constants.js  crc32.js  debug.js  decode.js  encode.js  lib.rs  schema-registry.js  validate.js  varint.js
test/: fuzz.spec.js  integers.spec.js  schema.spec.js  schemaless.spec.js  string-fallback.spec.js
